<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Money Saver</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--income-->
    <string name="title_activity_add_income">ဝင္ေငြထည့္ရန္</string>
    <string name="label_date">Date</string>
    <string name="label_category">Category</string>
    <string name="lbl_amount">Amount</string>
    <string name="label_note">Note</string>
    <string name="save">Save</string>
    <string name="lbl_title">Title</string>

    <!-- expense -->
    <string name="lbl_expense_title">အေၾကာင္းအရာ</string>
    <string name="lbl_expense_amount">သံုးလိုက္ေသာ ေငြ (က်ပ္)</string>
    <string name="lbl_expense_category">အမ်ိဳးအစား</string>
    <string name="lbl_expense_date">ေန႔စြဲ</string>
    <string name="lbl_expense_note">မွတ္ခ်က္</string>
    <string name="save_expense">သိမ္းရန္</string>

    <!-- income -->
    <string name="lbl_income_title">အေၾကာင္းအရာ</string>
    <string name="lbl_income_amount">စုစုေပါင္း ဝင္ေငြ (က်ပ္)</string>
    <string name="lbl_income_category">အမ်ိဳးအစား</string>
    <string name="lbl_income_date">ေန႔စြဲ</string>
    <string name="lbl_income_note">မွတ္ခ်က္</string>
    <string name="save_income">သိမ္းရန္</string>
    <string name="title_activity_add_bill">ေပးေဆာင္ရမည့္ေဘ ျဖည့္ရန္</string>

    <!-- bill -->
    <string name="lbl_bill_title">အေၾကာင္းအရာ</string>
    <string name="lbl_bill_final_date">ေနာက္ဆံုးေပးေဆာင္ရမည့္ ေန႔စြဲ</string>
    <string name="lbl_bill_remind_date">သတိေပးရမည့္ေန႔</string>
    <string name="lbl_bill_amount">ေပးေဆာင္ရမည့္ ေငြ (က်ပ္)</string>

    <string name="lbl_bill_yes_text">ေဆာင္ျပီးျပီ</string>
    <string name="lbl_bill_no_text">မေဆာင္ရေသးပါ</string>
    <string name="lbl_bill_warning">သတိေပးရမည့္ေန႔သည္ ေနာက္ဆံုးေပးေဆာင္ရမည့္ ေန႔ထက္ေက်ာ္ေနသည္</string>


    <!-- left menu -->
    <string name="save_bill">သိမ္းရန္</string>
    <string name="left_menu_expense">သံုးေငြ</string>
    <string name="left_menu_income">ဝင္ေငြ</string>
    <string name="left_menu_expense_category">အသံုးစရိတ္ အမ်ဳိးအစား</string>
    <string name="left_menu_reminder_for_bill">ေပးေဆာင္ရမည့္ စာရင္း</string>

    <string name="content_authority">com.padc.nyi.moneysaver123</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_expense_cat_id">ExpenseCatIDActivity</string>

    <string name="lbl_daily_noti">သင့္အသံုးစရိတ္ထည့္ရန္ အခ်ိန္က်ေရာက္ပါၿပီ</string>
    <string name="title_activity_add_expense">သံုးလိုက္ေသာ ေငြထည့္ရန္</string>

</resources>
