<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_expense"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/left_menu_expense" />
        <item
            android:id="@+id/nav_income"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/left_menu_income" />
        <item
            android:id="@+id/nav_expense_category"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/left_menu_expense_category" />
        <item
            android:id="@+id/nav_bill"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/left_menu_reminder_for_bill" />
    </group>



</menu>
