<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.padc.nyi.moneysaver123.activities.AddExpenseActivity"
    tools:showIn="@layout/activity_add_expense">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/margin_medium_2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_date"/>

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="@drawable/backgroud_border"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_category"/>

            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/backgroud_border"
                />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout"
        android:text="@string/lbl_title"
        android:textSize="@dimen/text_regular_3x"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/et_title"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_title"
        android:background="@drawable/backgroud_border"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/margin_medium"
        android:textSize="@dimen/text_regular_3x"/>

    <TextView
        android:id="@+id/txt_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_title"
        android:text="@string/lbl_amount"
        android:textSize="@dimen/text_regular_3x"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/et_amount"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_amount"
        android:background="@drawable/backgroud_border"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/margin_medium"
        android:textSize="@dimen/text_regular_3x"
        android:inputType="number"/>

    <TextView
        android:id="@+id/lbl_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_note"
        android:layout_below="@id/et_amount"
        android:layout_marginTop="@dimen/margin_medium_2"/>

    <Button
        android:id="@+id/btn_expense_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        />

    <EditText
        android:id="@+id/et_note"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/lbl_note"
        android:layout_above="@id/btn_expense_save"
        android:background="@drawable/backgroud_border"
        android:gravity="start"
        android:padding="@dimen/margin_medium"/>


</RelativeLayout>
