<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.padc.nyi.moneysaver123.activities.AddBillActivity"
    tools:showIn="@layout/activity_add_bill"
    android:orientation="vertical"
    android:background="@drawable/back97">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.padc.nyi.moneysaver123.components.MMTextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_expense_title"
            android:textSize="@dimen/text_regular"/>

        <EditText
            android:id="@+id/et_bill_title"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/backgroud_border"
            android:padding="@dimen/margin_medium"
            android:textSize="@dimen/text_regular"
            android:layout_marginBottom="@dimen/margin_medium_2"/>

        <com.padc.nyi.moneysaver123.components.MMTextView
            android:id="@+id/txt_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_bill_amount"
            android:textSize="@dimen/text_regular"/>

        <EditText
            android:id="@+id/et__bill_amount"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/backgroud_border"
            android:padding="@dimen/margin_medium"
            android:textSize="@dimen/text_regular"
            android:inputType="number"
            android:layout_marginBottom="@dimen/margin_medium_2"/>

        <com.padc.nyi.moneysaver123.components.MMTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_bill_final_date"
            android:textSize="@dimen/text_regular"/>

        <TextView
            android:id="@+id/txt_bill_final_date"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/backgroud_border"
            android:textSize="@dimen/text_regular"
            android:padding="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_medium_2"/>

        <com.padc.nyi.moneysaver123.components.MMTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_bill_remind_date"
            android:textSize="@dimen/text_regular"/>

        <TextView
            android:id="@+id/txt_bill_remind_date"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/backgroud_border"
            android:textSize="@dimen/text_regular"
            android:padding="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_medium_2"/>

        <com.padc.nyi.moneysaver123.components.MMButton
            android:id="@+id/btn_bill_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_bill"
            android:background="@color/primary"
            android:textColor="@color/mdtp_white"
            />


    </LinearLayout>

</ScrollView>
