<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_medium"
    android:background="@drawable/back97">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_small">

        <ImageView
            android:id="@+id/iv_title_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chrome_reader_mode_black_24dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_medium_2"
            />

        <com.padc.nyi.moneysaver123.components.MMTextView
            android:id="@+id/tv_lbl_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_bill_title"
            android:textSize="@dimen/text_regular"
            android:textColor="@color/primary"
            android:layout_toRightOf="@id/iv_title_image"/>

        <com.padc.nyi.moneysaver123.components.MMTextView
            android:id="@+id/tv_detail_bill__alarm_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_lbl_detail_title"
            android:layout_toRightOf="@id/iv_title_image"
            android:text="@string/lbl_expense_title"
            android:textSize="@dimen/text_regular_3x"
            android:layout_marginBottom="@dimen/margin_medium"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_small">

        <ImageView
            android:id="@+id/iv_amount_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_attach_money_black_24dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_medium_2"
            />

        <com.padc.nyi.moneysaver123.components.MMTextView
            android:id="@+id/tv_lbl_detail_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iv_amount_image"
            android:text="@string/lbl_bill_amount"
            android:textSize="@dimen/text_regular"
            android:textColor="@color/primary"
            />

        <com.padc.nyi.moneysaver123.components.MMTextView
            android:id="@+id/tv_detail_bill_alarm_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_lbl_detail_amount"
            android:layout_toRightOf="@id/iv_amount_image"
            android:text="@string/lbl_bill_amount"
            android:textSize="@dimen/text_regular_3x"
            android:layout_marginBottom="@dimen/margin_medium"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_small">

        <ImageView
            android:id="@+id/iv_date_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_today_black_24dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_medium_2"
            />

        <com.padc.nyi.moneysaver123.components.MMTextView
            android:id="@+id/tv_lbl_detail_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iv_date_image"
            android:text="@string/lbl_bill_final_date"
            android:textSize="@dimen/text_regular"
            android:textColor="@color/primary"
            />

        <com.padc.nyi.moneysaver123.components.MMTextView
            android:id="@+id/tv_detail_bill_alarm_final_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_lbl_detail_date"
            android:layout_toRightOf="@id/iv_date_image"
            android:layout_marginBottom="@dimen/margin_medium"
            android:text="@string/lbl_bill_final_date"
            android:textSize="@dimen/text_regular_3x"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_small">

        <ImageView
            android:id="@+id/iv_date_remind_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_today_black_24dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_medium_2"
            />

        <com.padc.nyi.moneysaver123.components.MMTextView
            android:id="@+id/tv_lbl_detail_remind_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iv_date_remind_image"
            android:text="@string/lbl_bill_remind_date"
            android:textSize="@dimen/text_regular"
            android:textColor="@color/primary"
            />

        <com.padc.nyi.moneysaver123.components.MMTextView
            android:id="@+id/tv_detail_bill_alarm_remind_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_lbl_detail_remind_date"
            android:layout_toRightOf="@id/iv_date_remind_image"
            android:layout_marginBottom="@dimen/margin_medium"
            android:text="@string/lbl_bill_remind_date"
            android:textSize="@dimen/text_regular_3x"/>
    </RelativeLayout>

    <com.padc.nyi.moneysaver123.components.MMButton
        android:id="@+id/btn_bill_detail_alarm_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_bill_yes_text"
        android:background="@color/primary"
        android:textColor="@color/mdtp_white"
        android:layout_gravity="center"
        android:padding="@dimen/margin_medium"
        />

    <com.padc.nyi.moneysaver123.components.MMButton
        android:id="@+id/btn_bill_detail_alarm_not_yet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_bill_no_text"
        android:background="@color/primary"
        android:textColor="@color/mdtp_white"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_gravity="center"
        android:padding="@dimen/margin_medium"
        />


</LinearLayout>
