<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.padc.nyi.moneysaver123.activities.AddIncomeActivity"
    tools:showIn="@layout/activity_add_income" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/add_income_container_paddingleft"
        android:paddingRight="@dimen/add_income_container_paddingright"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/income_info_paddingBottom"
            android:weightSum="5">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:text="@string/lbl_info"/>

            <EditText
                android:id="@+id/et_info"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:paddingTop="14dp"
                android:textAlignment="center"
                android:editable="false"
                android:background="@drawable/backgroud_border"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="12dp"
            android:weightSum="5">
            <TextView
                android:id="@+id/txt_amount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/lbl_amount"
                android:layout_weight="2.5"/>

            <EditText
                android:id="@+id/et_amount"
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:background="@drawable/backgroud_border"
                android:padding="@dimen/margin_medium"
                android:inputType="number"
                android:layout_weight="2.5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/add_income_category_padding_bottom"
            android:weightSum="5">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:text="@string/label_category"/>

            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:layout_weight="2.5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="12dp"
            android:weightSum="5">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:text="@string/label_date"/>

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="5dp"
                android:layout_height="50dp"
                android:layout_weight="2.5"
                android:paddingTop="14dp"
                android:textAlignment="center"
                android:editable="false"
                android:background="@drawable/backgroud_border"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="12dp"
            android:weightSum="5">
            <TextView
                android:id="@+id/lbl_note"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/label_note"
                android:layout_weight="2.5" />


            <EditText
                android:id="@+id/et_note"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:background="@drawable/backgroud_border"
                android:padding="@dimen/margin_medium"
                android:lines="3"
                android:scrollbars="vertical"
                android:layout_weight="2.5"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_expense_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_gravity="right"/>

    </LinearLayout>



</ScrollView>
